list element mark corrected, review img borders changed, review text align centered, reviewer name media corrected to align at the same time

--- a/css/button.css
+++ b/css/button.css
@@ -4,7 +4,7 @@
 }
 
 .buy_button {
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: "Candara", sans-serif;
   background-color: aquamarine;
   border:1px solid black;
   font-size: 50px;
