--- a/css/info.css
+++ b/css/info.css
@@ -6,11 +6,17 @@
   list-style: none;
 }
 
+.description::after {
+  content: '\0000a0';
+  display: block;
+}
+
 .feature:before {
   content: '';
   display: inline-block;
-  width: 40px;
-  height: 40px;
+  vertical-align: center;
+  width: 25px;
+  height: 25px;
   background: url(../images/paw.png);
   background-size: contain;
   background-repeat: no-repeat;
